<resources>
    <string name="app_name">controllerMaster</string>
    <string name="mainActivityTxt">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startBtnTxt">スタート</string>
    <string name="projectorVideoBtn">pjBtn</string>
    <string name="selectBtnText1">プロジェクタ\n映像選択</string>
    <string name="selectBtnText2">モニタ\n映像選択</string>
    <string name="selectBtnText3">環境\n操作</string>
    <string name="selectBtnText4">システム\n終了</string>
    <string name="selectBtnText5">プロジェクタ\n操作</string>
    <string name="selectBtnText6">スクリーン\n操作</string>
    <string name="selectBtnText7">照明\n操作</string>
    <string name="selectBtnText8"> </string>
    <string name="startMessageText">システム起動中です\nしばらくお待ちください</string>
    <string name="countText">0%</string>
    <string name="lightOnBtnText">ＯＮ</string>
    <string name="lightOffBtnText">ＯＦＦ</string>
    <string name="monitorSelBtnText1">モニタ\nソース１</string>
    <string name="monitorSelBtnText2">モニタ\nソース２</string>
    <string name="monitorSelBtnText3">モニタ\nソース３</string>
    <string name="projectorSelBtnText1">プロジェクタ\nソース１</string>
    <string name="projectorSelBtnText2">プロジェクタ\nソース２</string>
    <string name="projectorSelBtnText3">プロジェクタ\nソース３</string>
    <string name="screenUpBtnText">ＵＰ</string>
    <string name="screenStopBtnText">ＳＴＯＰ</string>
    <string name="screenDownBtnText">ＤＯＷＭ</string>
    <string name="projectorOnBtnText">ＯＮ</string>
    <string name="projectorOffBtnText">ＯＦＦ</string>
    <string name="projectorMuteBtnText">Ｍｕｔｅ</string>

    <!-- システム起動待ち時間 -->
    <string name="startupTime">10</string>
</resources>