<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".monitorVideoSelFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/monitorSelBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitorSelBtnText1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/monitorSelBtn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/monitorSelBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitorSelBtnText3"
        app:layout_constraintBottom_toBottomOf="@+id/monitorSelBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monitorSelBtn2"
        app:layout_constraintTop_toTopOf="@+id/monitorSelBtn2" />

    <Button
        android:id="@+id/monitorSelBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitorSelBtnText2"
        app:layout_constraintBottom_toBottomOf="@+id/monitorSelBtn1"
        app:layout_constraintEnd_toStartOf="@+id/monitorSelBtn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monitorSelBtn1"
        app:layout_constraintTop_toTopOf="@+id/monitorSelBtn1" />

</androidx.constraintlayout.widget.ConstraintLayout>