<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".projectorContFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/projectorSelBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projectorOnBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/projectorSelBtn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/projectorSelBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projectorOffBtnText"
        app:layout_constraintBottom_toBottomOf="@+id/projectorSelBtn1"
        app:layout_constraintEnd_toStartOf="@+id/projectorSelBtn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/projectorSelBtn1"
        app:layout_constraintTop_toTopOf="@+id/projectorSelBtn1" />

    <Button
        android:id="@+id/projectorSelBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projectorMuteBtnText"
        app:layout_constraintBottom_toBottomOf="@+id/projectorSelBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/projectorSelBtn2"
        app:layout_constraintTop_toTopOf="@+id/projectorSelBtn2" />

</androidx.constraintlayout.widget.ConstraintLayout>